Major refactoring in order to levarage conversion from JSON objects to Java objects provided by Spring Boot annotation @RequestBody.
